
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* res_buf ;
 int sprintf (char*,char*,int) ;

char* ssl_error(int code) {
 switch (code) {
  case 0x00: return "SSL2 PE UNDEFINED ERROR (0x00)";
  case 0x01: return "SSL2 PE NO CIPHER (0x01)";
  case 0x02: return "SSL2 PE NO CERTIFICATE (0x02)";
  case 0x04: return "SSL2 PE BAD CERTIFICATE (0x03)";
  case 0x06: return "SSL2 PE UNSUPPORTED CERTIFICATE TYPE (0x06)";
 default:
  sprintf(res_buf, "%02x", code);
  return res_buf;
 }
}
